--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css?v=1">
     <meta charset="utf-8" />
 
   </head>
   <body>
     <main></main>
-    <script src="sketch.js"></script>
+    <script src="sketch.js?v=1"></script>
   </body>
 </html>
